--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   firebase_core: ^3.10.1
+  firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.2
+  email_validator: ^2.0.1
+
   flutter:
     sdk: flutter
 
